--- a/src/app/components/quizz/quizz.component.html
+++ b/src/app/components/quizz/quizz.component.html
@@ -1,3 +1,17 @@
 <div class="quizz__container">
-  
+  <div class="quizz_logo">
+    <img src="assets/imgs/logo.png" alt="" />
+    <h3>Título</h3>
+  </div>
+
+  <div class="quizz_questions">
+    <h3>Questao selecionada</h3>
+  </div>
+  <div class="quizz_options">
+    <button class="btn-option">option name</button>
+  </div>
+  <div class="quizz_results">
+    <h1>O seu resultado é: </h1>
+    <p>Resposta Selecionada:</p>
+  </div>
 </div>
